fzf-like multi-select feature

--- a/dmenu.1
+++ b/dmenu.1
@@ -88,11 +88,11 @@ arrow keys, page up, page down, home, and end.
 Copy the selected item to the input field.
 .TP
 .B Return
-Confirm selection.  Prints the selected item to stdout and exits, returning
-success.
+Confirm selection.  Prints all marked lines (or the current line if none are marked)
+to stdout and exits, returning success.
 .TP
-.B Ctrl-Return
-Confirm selection.  Prints the selected item to stdout and continues.
+.B Alt-Return
+Confirm selection.  Marks/unmarks the selected item and continues.
 .TP
 .B Shift\-Return
 Confirm input.  Prints the input text to stdout and exits, returning success.
@@ -178,16 +178,16 @@ Home
 .B M\-G
 End
 .TP
-.B M\-h
+.B M\-k
 Up
 .TP
-.B M\-j
+.B M\-l
 Page down
 .TP
-.B M\-k
+.B M\-h
 Page up
 .TP
-.B M\-l
+.B M\-j
 Down
 .SH SEE ALSO
 .IR dwm (1),
